# READY8

./: CMakeLists.txt
include/: header.h
scripts/: checks.sh
sources/: main.cpp  source.cpp
